@@ -1,1 +1,1 @@
-1.10.3
+1.10.6
