@@ -1,4 +1,4 @@
-FROM golang:1.10.3
+FROM golang:1.10.6
 MAINTAINER Nicolas Ruflin <ruflin@elastic.co>
 
 RUN set -x && \
