@@ -1,6 +1,6 @@
 :stack-version: 6.4.0
 :doc-branch: 6.x
-:go-version: 1.10.3
+:go-version: 1.10.6
 :release-state: unreleased
 :python: 2.7.9
 :docker: 1.12
